<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/movieFragment"
            android:icon="@drawable/ic_local_movies_black_24dp"
            android:title="@string/movies"/>
    <item
            android:id="@+id/tvShowFragment"
            android:icon="@drawable/ic_live_tv_black_24dp"
            android:title="@string/tv_show"/>
    <item
            android:id="@+id/favoritesFragment"
            android:icon="@drawable/ic_local_activity_black_24dp"
            android:title="@string/favorites"/>
</menu>