<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="short_description_of_the_movies">Short Description of the movies</string>

    <!--String placeholder-->

    <!--initial value-->

    <string name="_0">0%</string>
    <string name="title">Movie Title</string>
    <string name="cd_movie_poster">movie_poster</string>
    <string name="overview">Overview</string>
    <string name="loading_data">Loading Data</string>
    <string name="action_search">Search</string>

    <string name="release_date_data">release date data</string>
    <string name="release_date_header">Release Date :</string>
    <string name="loading_tagline_header">Loading Tagline</string>
    <string name="popularity_header">Popularity :</string>
    <string name="cast">Cast</string>
    <string name="duration_header">Duration :</string>
    <string name="loading_duration">loading duration</string>
    <string name="genre_header">Genre :</string>
    <string name="empty">-</string>
    <string name="loading_score">loading score</string>
    <string name="score_s">Score: %1$s</string>
    <string name="duration_s_min">%1$s min.</string>

    <string name="add_favorites">Add to Favorites</string>
    <string name="remove_favorites">Remove from Favorites</string>
    <string name="title_activity_favorites_detail">FavoritesDetailActivity</string>
    <string name="movies">Movies</string>
    <string name="tv_show">TV Show</string>
    <string name="search_movie">Search Movie / TV Show</string>
    <string name="movie_tv_show_title">Movie/TV Show Title</string>
    <string name="no_data_message">No matching data founds, try another keywords.</string>
    <string name="error_occurred_message">an error occurred, please try again.</string>
    <string name="search_movie_title_label">search movie title</string>
    <string name="search_tv_show_title_label">search TV show title</string>
    <string name="favorites">Favorites</string>

</resources>
