...
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>
    </com.google.android.material.appbar.AppBarLayout>
    <fragment
            android:id="@+id/nav_host_fragment"
            app:defaultNavHost="true"
            android:name="androidx.navigation.fragment.NavHostFragment"
            app:navGraph="@navigation/home_nav"
            android:layout_width="0dp" android:layout_height="0dp"
              app:layout_constraintTop_toBottomOf="@+id/appBarLayout" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="0dp" android:layout_marginBottom="0dp"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="0dp" app:layout_constraintBottom_toTopOf="@+id/nav_view"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
...
