...
                    app:tabIndicatorColor="@color/colorWhite" />

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.viewpager.widget.ViewPager
                android:id="@+id/vp_movie"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="0dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
...
