<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/favorites_toggle"
            android:enabled="true"
            android:icon="@drawable/ic_favorite_border_black_24dp"
            android:iconifiedByDefault="false"
            android:title="@string/add_favorites"
            android:visible="true"
            app:showAsAction="always" />
</menu>