<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".presentation.ui.movies.MovieFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/srl_movies" android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movie"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ProgressBar
            android:id="@+id/pb_movies" android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
</RelativeLayout>